# circhemy

./: .gitignore  MANIFEST.in  README.md  README.rst  setup.cfg
.github/workflows/: build_docker.yml  pypi_publishing.yml  run_circhemy_ci.yml  run_circhemy_convert.yml  run_circhemy_query.yml
circconvert/: circconvert.py  web.py
circconvert/common/: util.py
circconvert/web/static/: style.css
circhemy/: circhemy.py  circhemy_cli.py  circhemy_web.py  web.py
circhemy/cli/: cli.py
circhemy/common/: util.py
circhemy/data/: circhemy.sqlite3.gz.md5  circhemy_convert.results  circhemy_query.results  circhemy_schema.sql
circhemy/web/: web.py
circhemy/web/static/: header.html
data/: circrnadb_schema.sql
docker/: Dockerfile
scripts/: build_sqlite_db.R  convert_circrna_names.py  database_import_v2.py  generate_circhemy_sitemap.py  generate_exon_from_ensembl.py  naming_conversion_data_preparation.py  run.sh  setup_sqlite_database.sh
