[metadata]
name = circhemy
description = circhemy - The alchemy of circular RNA ID conversion
version = 0.0.3
long_description = file: README.rst
long_description_content_type =  text/x-rst
url = https://github.com/jakobilab/circhemy
author = Tobias Jakobi
author_email = tjakobi@arizona.edu
license= GNU General Public License (GPL)
license_files = LICENSE.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords=
    circRNA
    circular RNA naming
    circular RNA bioinformatics
    circular RNA ID conversion
    circular RNA database
project_urls =
    Bug Reports = https://github.com/jakobilab/circhemy/issues
    Jakobi Lab =  https://jakobilab.org
    Source = https://github.com/jakobilab/circhemy
    Documentation = https://circhemy.jakobilab.org
    circtools circRNA analytics = https://github.com/jakobilab/circtools

[options]
zip_safe = False
platforms = Linux, Darwin
include_package_data = True
python_requires = >=3.7
install_requires = argparse
packages = circhemy,
           circhemy.common,
           circhemy.cli,
           circhemy.web,
           circhemy.data

setup_requires = wheel

[options.extras_require]
web = nicegui >= 1.1.6
      feedparser >= 5.2.1
      python-dateutil >= 2.8.2
      fastapi<0.89.0,>=0.88.0
      pydantic >= 1.10.4
      Pygments >= 2.14.0

[options.entry_points]
console_scripts =
    circhemy = circhemy.circhemy_cli:main
    web_circhemy = circhemy.circhemy_web:main
